--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,6 @@
 <Button
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text=""
+    android:text="create random number"
 
 </androidx.constraintlayout.widget.ConstraintLayout>
